tdf#105799 Fix vector use bug

Change-Id: Ibf2b5314584725a10e11fe83e9fef5c710e421c4
Reviewed-on: https://gerrit.libreoffice.org/73937
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit adcb7bacb452dccde70b20a902f5c1f23f37913f)
Reviewed-on: https://gerrit.libreoffice.org/74151
Reviewed-by: Michael Stahl <Michael.Stahl@cib.de>